uploading svg directory

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		  </nav>
 	  <br/>
 	  <br/>
-		  <img src="assets/svgs/web-design.svg">
+		  <img src="assets/svg/web-design.svg">
   	</div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="assets/js/jquery-3.2.1.min.js"></script>
