card without margin

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				  </a>
 				  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 					<a class="dropdown-item" href="https://secure-fortress-87025.herokuapp.com/">People Finder</a>
-                    <a class="dropdown-item" href="https://immense-thicket-24938.herokuapp.com/">Illustrator Contest Card</a>
+                    <a class="dropdown-item" href="https://salty-tundra-75808.herokuapp.com/">Illustrator Contest Card</a>
                     <a class="dropdown-item" href="https://floating-oasis-13701.herokuapp.com/">Wanderlust (coming soon)</a>
 				  </div>
 				</li>
