--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 				  <a class="nav-link" href="#">Contact</a>
 				</li>
 				<li class="nav-item dropdown">
-				  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				  <a class="nav-link dropdown-toggle" href="#"
+					 id="navbarDropdownMenuLink"
+					 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					Web Projects
 				  </a>
 				  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
